syntax = "proto3";
package ukama.simPool.v1;
option go_package = "pb/gen";

service SimPoolService {
    rpc GetStats (GetStatsRequest) returns (GetStatsResponse) {}
    rpc Add(AddRequest) returns (AddResponse){}
    rpc Delete(DeleteRequest) returns (DeleteResponse){}
    rpc Upload(UploadRequest) returns (UploadResponse){}
}
message GetStatsRequest{
    SimType simType = 1;
}
message GetStatsResponse {
    uint64 total = 1;
    uint64 available = 2;
    uint64 consumed = 3;
    uint64 failed = 4;
}

message AddRequest{
    repeated SimInfo simInfo = 1;
}

message AddResponse{
    repeated string iccid = 1;
}
message DeleteRequest{
    repeated string iccid = 1;
}
message DeleteResponse {
    repeated string iccid = 1;
}

message UploadRequest{
    bytes simPoolData = 1;
}
message UploadResponse {
    repeated string iccid = 1;
}

message SimPool{
    uint64 id = 1;
    string iccid = 2;
    string msisdn = 3; 
    bool isAllocated = 4;
    SimType simType = 5;
    string smDpAddress = 6;
    string activationCode = 7;
    string qrCode = 8;
    string created_at=9;
    string deleted_at=10;
    string updated_at=11;
}

message SimInfo{
    string iccid = 1;
    SimType simType = 2;
    string msisdn = 3;
    string smDpAddress = 4;
    string activationCode = 5;
    string qrCode = 6; 
}

enum SimType {
    inter_none=0;
    inter_mno_data=1;
    inter_mno_all=2;
    inter_ukama_all=3;
}